# Qt-Timer-Application

./: CMakeLists.txt  main.cpp  timewidget.cpp  timewidget.h
